--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   easy_localization: ^3.0.7+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  uuid: ^4.5.1
  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1 # For generating Hive adapters
+  build_runner: ^2.4.11 # For running code generators
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
