--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   uuid: ^4.5.1
+  fl_chart: ^1.0.0
+  intl: ^0.20.2
  
 
 dev_dependencies:
